--- a/conclusion.tex
+++ b/conclusion.tex
@@ -36,6 +36,12 @@
 %  * illustrated the difference of these results against CDH
 %  * provide the simulation environment which facilitates correct computations, 
 %    and solves the phase-ambiguity in the s-parameter method in an original way
+%  * express author's opinions on: 
+%		1) viability of the "information velocity"   
+%		2) local media application   
+%		3) questioning the supposed novelty and practical impact of MMs
+%		4) that probably no dielectric-only metamaterial can be built for permittivity contrast below 50
+
 
 
 
